# RAG-web-system

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  install-python-3.11.9.md  pyproject.toml  start.sh
.cursor/rules/: language.mdc  rag-coding-style.mdc
.cursor/skills/rag-web-dev/: CHANGELOG.md  SKILL.md
.cursor/skills/rag-web-dev/refs/: architecture.md  default-params.md  extension-scenarios.md  implicit-knowledge.md  troubleshooting.md
app/: __init__.py  main.py
app/core/: __init__.py  config.py  errors.py
app/eval/: dataset_builder.py  ragas_eval.py  reporting.py  testset_runner.py
app/rag/: bm25_store.py  generator.py  ingest.py  pipeline.py  reranker.py  retriever.py  vector_store.py
app/schemas/: rag.py
app/web/: gradio_ui.py
scripts/: check_env.py
tests/: test_eval.py  test_generation.py  test_retrieval.py
