[project]
name = "rag-web-system"
version = "0.1.0"
description = "LangChain 1.0+ based RAG web system with FastAPI, Gradio, and RAGAS."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "gunicorn>=22.0.0",
  "gradio>=4.44.0",
  "langchain>=1.0.0",
  "langchain-community>=0.3.0",
  "langchain-openai>=0.2.0",
  "langchain-huggingface>=0.1.0",
  "langchain-ollama>=0.2.0",
  "langchain-chroma>=0.1.0",
  "langchain-text-splitters>=0.3.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "tenacity>=8.5.0",
  "ragas>=0.2.10",
  "datasets>=2.20.0",
  "pypdf>=4.3.0",
  "rank-bm25>=0.2.2",
  "jieba>=0.42.1",
  "matplotlib>=3.8.0",
]

[project.optional-dependencies]
reranker = [
  "sentence-transformers>=3.0.0",
]
mineru = [
  "magic-pdf[full]>=0.9.0",
]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
